--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,6 @@
 <head>
     <title>main page</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@1&family=Roboto&display=swap" rel="stylesheet">
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
@@ -25,7 +24,7 @@
                 <input type="radio" class="btn-check cls " name="option" id="Labs">
                 <label class="btn btn-secondary roomsbtn " for="Labs">Labs</label>
 
-                <a href="AO.html" class="goback">
+                <a href="AO.html" class="goback" id="aobtn">
                    Notifications
                    <span class="badge bg-danger"></span>
 
